# mbus

doc/: mbus-frame-specification-v0_1.xls
soft/Inc/: mbus.h
soft/Src/: mbus.c
test/: CMakeLists.txt  tests_mbus.c
