cmake_minimum_required(VERSION 2.6)
set(DCMAKE_BUILD_TYPE Debug)
project (tests_mbus LANGUAGES C)
add_executable(tests_mbus tests_mbus.c)
add_subdirectory(build)
add_subdirectory((build/lib))
add_library(mbus STATIC build/lib/mbus.c)
target_link_libraries(tests_libsparse mbus)
target_link_libraries(tests_libsparse cmocka)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)